# KingSlayer

./: CMakeLists.txt  README.md  card.cpp  card.h  cardwidget.cpp  cardwidget.h  gamemanager.cpp  gamemanager.h  mainwindow.cpp  mainwindow.h  playvalidator.cpp  playvalidator.h  resources.qrc  rules.md
